made tabs more responsive

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1085,6 +1085,10 @@ body,
 	transition:margin-left 0.3s ease;
     margin-top: -40px;
     border-bottom: 5px solid $sky;
+    @media (max-width: 1428px) {
+	    margin-top: -60px;
+    	height: 65px;
+    }
 }
 
 
@@ -1124,6 +1128,9 @@ ul.upload-steps{
 			&:hover{
 				background-color:transparent;
 				color:$ocean;
+			}
+			@media (max-width: 1428px) {
+				span {display: block;}
 			}
 		}
 
