--- a/src/sass/_crn-variables.scss
+++ b/src/sass/_crn-variables.scss
@@ -30,3 +30,6 @@ $brand-danger:          #C82424 !default;
 //Cabin weights:400 - italic 400 
 $font-family-ssp: 'Source Sans Pro', sans-serif;
 $font-family-cabin: 'Cabin', sans-serif;
+
+
+$btn-shadow:1px 1px 3px -1px rgba(0,0,0,0.7);
