--- a/src/sass/_crn-general_BStrap_Overrides.scss
+++ b/src/sass/_crn-general_BStrap_Overrides.scss
@@ -49,7 +49,7 @@
 		border-color: $primary;
 		background:none;
 		&:hover{
-			color: $primaryHover;
+			color: $white;
 			border-color: $primaryHover;
 		}
 	}
@@ -66,11 +66,46 @@
 	    }
 	    i{margin-left:6px;}
 	}
+	&.warning{
+	}
+	&.delete{
+		border: none;
+	    color: $white;
+	    background-color: $brand-danger;
+	    &:hover{
+	    	background:darken($brand-danger, 10%)
+	    }
+	}
+	&.cancel{
+	}
+
+	&.admin-blue{
+		background-color:$sky;
+		@include gradient-vertical($start-color: lighten($sky, 8%), $end-color: $sky, $start-percent: 10%, $end-percent: 100%);
+		box-shadow:1px 1px 3px -1px rgba(0,0,0,0.7);
+		border-radius: 2px;
+		outline: none;
+		white-space: nowrap;
+		-webkit-user-select: none;
+		cursor: pointer;
+		font-weight: 300;
+		color:$white;
+		text-align: center;
+		margin:0;
+		border:1px solid lighten($sky, 8%);
+		text-transform: uppercase;
+		transition: all 0.3s ease-out;
+		&:hover,
+		&:active,
+		&.hover,
+		&.active  {
+			background: darken($sky, 10%);
+			transition: all 0.3s ease-out;
+			color:#fff;
+		}
+	}
 }
 .btn-blue{
-	font-family: FontAwesome;
-	content: '\f07b \0020 Validate';
-	display: inline-block;
 	background-color:$sky;
 	@include gradient-vertical($start-color: lighten($sky, 8%), $end-color: $sky, $start-percent: 10%, $end-percent: 100%);
 	box-shadow:1px 1px 3px -1px rgba(0,0,0,0.7);
@@ -109,9 +144,6 @@
 }
 
 .form-group label {
-	position: absolute;
-	top: 3px;
-	right: 5px;
 	font-size: 10px;
 	color: #777;
 	//display: none;
@@ -129,7 +161,8 @@
 	box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.14);
 }
 
-textarea {
+textarea,
+textarea.form-control {
 	width: 100%;
 	min-height: 200px;
 	font-size: 22px;
