--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -27,16 +27,15 @@
 		margin: 20px 0;
 	}
 	.dataset-descriptions{
-		background-color: #F7F7F7;
 		padding: 0;
-		box-shadow: inset -8px 0px 13px -13px rgba(0, 0, 0, 0.5);
 	}
 	.description-item{
 		padding: 20px;
 		border-bottom:1px solid #eee;
 		border-right:1px solid #eee;
-				&:last-child{
-			border-bottom:none;
+		border-left:1px solid #eee;
+				&:first-child{
+			border-top:1px solid #eee;
 		}
 	}
 	.dataset-readme{
@@ -48,7 +47,6 @@
 		font-size: 30px;
 		text-transform: uppercase;
 		font-weight: 100;
-		border-bottom: 1px solid #E1E1E1;
 		.dataset-name{
 			float: left;
 		}
@@ -95,9 +93,11 @@
 	.tools.nav.nav-pills{
 		padding: 0 20px 0;
 		margin: 0;
-		border-bottom:1px solid #E1E1E1;
+		text-align:right;
 		li {
 			overflow: hidden;
+			float: none;
+			display: inline-block;
 			button{
 					padding:10px 12px;
 				}
