changing status style

--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -59,12 +59,12 @@
 				font-family: $font-family-cabin;
 				font-weight: 300;
 				padding: 0;
-				margin: 3px 0 0 15px;
+				margin: 7px 0 0 15px;
 				text-align: center;
 				display: block;
 				width: 100%;
 				i.fa{
-					display: block;
+					margin-right: 5px;
 				}
 			
 				&.ds-primary{
