--- a/src/sass/_crn-upload.scss
+++ b/src/sass/_crn-upload.scss
@@ -231,7 +231,7 @@
 	  			margin: 0;
 	  		}
 		}
-		.upload-accordion{
+		.upload-wrap{
 			display: block;
 			margin-top: 0;
 			margin-bottom: 0; 
@@ -262,24 +262,6 @@
 							&:hover{
 								text-decoration: underline;
 								background-color: #f4f4f4;
-							}
-							&:after{
-								content: '\f077';
-								font-family: FontAwesome;
-								color: $ocean;
-								font-weight: 300;
-								margin-right:5px;
-								font-size: 10px;
-								top: -3px;
-								position: relative;
-								float: right;
-								padding-top: 9px;
-
-							}
-							&.collapsed{
-								&:after{
-									content: '\f078';							 				
-								}
 							}
 						}
 					}
