--- a/src/sass/_crn-general_BStrap_Overrides.scss
+++ b/src/sass/_crn-general_BStrap_Overrides.scss
@@ -159,6 +159,10 @@
 	background: rgba(255,255,255,1);
 	border-radius:2px;
 	box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.14);
+	&:focus{
+		outline: 1px solid rgba(229, 85, 85, 0.25);
+
+	}
 }
 
 textarea,
@@ -173,6 +177,10 @@ textarea.form-control {
 	background: rgba(255,255,255,1);
 	border-radius:2px;
 	box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.14);
+	&:focus{
+		outline: 1px solid rgba(229, 85, 85, 0.25);
+		box-shadow:inset 0 0 1px 1px rgba(0,0,0,.14);
+	}
 }
 
 
