--- a/src/sass/_crn-upload.scss
+++ b/src/sass/_crn-upload.scss
@@ -257,7 +257,7 @@
 			display: block;
 			margin-top: 0;
 			margin-bottom: 0; 
-			border-bottom: 1px solid #bbb;
+			border-bottom: 1px solid #ddd;
 			background:transparent;
 			.upload-panel {
 				border-radius: 0;
