--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -39,11 +39,11 @@
 		}
 	}
 	.dataset-readme{
-	    padding: 20px;
+	    padding: 20px 20px 20px 0;
 	}
 	h1{
 		margin: 0;
-		padding: 20px;
+		padding: 20px 0 0 0;
 		font-size: 30px;
 		text-transform: uppercase;
 		font-weight: 100;
